# ybc

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml  docs-pages.yml  release.yaml
examples/basic/: Cargo.toml  index.html
examples/basic/src/: index.scss  main.rs
src/: common.rs  lib.rs
src/columns/: mod.rs
src/components/: accordion.rs  autocomplete.rs  breadcrumb.rs  calendar.rs  card.rs  dropdown.rs  menu.rs  message.rs  mod.rs  modal.rs  navbar.rs  pagination.rs  panel.rs  tabs.rs
src/elements/: block.rs  box.rs  button.rs  content.rs  delete.rs  icon.rs  image.rs  notification.rs  progress.rs  table.rs  tag.rs  title.rs
src/form/: checkbox.rs  control.rs  field.rs  file.rs  input.rs  radio.rs  select.rs  textarea.rs
src/layout/: container.rs  footer.rs  hero.rs  level.rs  media.rs  section.rs  tile.rs
ybc_catalog/: Cargo.toml  README.md  Trunk.toml  chatgpt_catalog.yaml   index.html  loader.js  rustfmt.toml  scripts_dev_serve.sh
ybc_catalog/src/: app.rs  lib.rs  main.rs  router.rs
ybc_catalog/src/components/: accordion_example_page.rs  autocomple_example_page.rs  autocomplete_example_page.rs  bread_crumbs_example.rs  bread_crumbs_example_page.rs  button_example.rs  calendar_example_page.rs  card_example.rs  form_example.rs  image_icon_example.rs  layout_columns_example.rs  message_example_page.rs  mod.rs  modal_example.rs  navbar_example.rs  pagination_example_page.rs  panel_example_page.rs  repro_example.rs  table_example.rs  tabs_example.rs  tag_notification_example.rs
ybc_catalog/src/ui/: catalog_list.rs  demo_title.rs  mod.rs
