[package]
name = "ybc"
version = "0.4.1"
description = "A Yew component library based on the Bulma CSS framework."
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>", "Konstantin Pupkov <konstantin.pupkov@fromkos.com>"]
edition = "2024"
license = "MIT/Apache-2.0"
repository = "https://github.com/goodidea-kp/ybc.git"
documentation = "https://docs.rs/ybc"
readme = "README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "yew"]

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = ["display"] }
web-sys = { version = "0.3.81", features = ["Element", "File", "HtmlCollection", "HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
yew-router = { version = "0.18.0", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
#gloo-console = "0.3.0"

[features]
default = ["router"]
router = ["yew-router"]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
