[package]
name = "ybc-catalog"
version = "0.1.1"
edition = "2024"
license = "MIT"
publish = false
authors = ["Konstantin Pupkov <konstantin.pupkov@fromkos.com>"]
description = "A catalog of Yew components using the YBC library."
repository = "https://github.com/goodidea-kp/ybc.git"


[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
#ybc = { git = "https://github.com/goodidea-kp/ybc.git" }
ybc = { path = ".." }
wasm-bindgen = "0.2"
yew-router = "0.20.0"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }

# Optional: keep local development override without affecting publish.
# This section is ignored by downstream users and does not block publishing.
[patch.crates-io]
ybc = { path = ".." }